--- a/app/views/calculator/_style_form.html.erb
+++ b/app/views/calculator/_style_form.html.erb
@@ -1,45 +1,54 @@
-<form action="/egg-timer/calculator/calculate" method="GET" id="calculator">
-	<fieldset>
-		<legend>Calculation style</legend>
-		<p>
-		<label class="radio">
-		<input type="radio" id="calculation-style-1" name="calculation-style" value="1" required <% if @calculation_style == 1 -%>checked<% end -%>> Bicameral instruments (clock stops if either House rises)</label>
-		</p>
-		<p>
-		<label class="radio">
-		<input type="radio" id="calculation-style-2" name="calculation-style" value="2" <% if @calculation_style == 2 -%>checked<% end -%>> Bicameral instruments (clock stops if both Houses rise)</label>
-		</p>
-		<p>
-		<label class="radio">
-		<input type="radio" id="calculation-style-3" name="calculation-style" value="3" <% if @calculation_style == 3 -%>checked<% end -%>> Commons only instruments</label>
-		</p>
-		<p>
-		<label class="radio">
-		<input type="radio" id="calculation-style-6" name="calculation-style" value="6" <% if @calculation_style == 6 -%>checked<% end -%>> Commons only sitting days</label>
-		</p>
-		<p>
-		<label class="radio">
-		<input type="radio" id="calculation-style-4" name="calculation-style" value="4" <% if @calculation_style == 4 -%>checked<% end -%>> Proposed negative statutory instruments</label>
-		</p>
-		<p>
-		<label class="radio">
-		<input type="radio" id="calculation-style-5" name="calculation-style" value="5" <% if @calculation_style == 5 -%>checked<% end -%>> Treaty periods A and B</label>
-		</p>
-	</fieldset>
-	<p>
-		<label>Start date: DD-MM-YYYY
-			<br>
-			<input type="date" name="start-date" id="start-date" required>
-		</label>
-	</p>
+<section>
+	<form action="/egg-timer/calculator/calculate" method="GET" id="calculator" class="p-form">
+
+		<fieldset class="p-form__fieldset p-3 my-3 border rounded">
+			<legend class="p-form__fieldset-legend">Calculation style</legend>
+			<div class="p-form__radio-group">
+		
+			<div class="p-form__radio-item">
+				<input type="radio" name="calculation-style" id="calculation-style-1" value="1" required <% if @calculation_style == 1 -%>checked<% end -%>/>
+				<label for="calculation-style-1" class="p-form__radio-item-label">Bicameral instruments (clock stops if either House rises)</label>
+			</div>
+		
+			<div class="p-form__radio-item">
+				<input type="radio" name="calculation-style" id="calculation-style-2" value="2" required <% if @calculation_style == 2 -%>checked<% end -%> />
+				<label for="calculation-style-2" class="p-form__radio-item-label">Bicameral instruments (clock stops if both Houses rise)</label>
+			</div>
+		
+			<div class="p-form__radio-item">
+				<input type="radio" name="calculation-style" id="calculation-style-3" value="3" required <% if @calculation_style == 3 -%>checked<% end -%> />
+				<label for="calculation-style-3" class="p-form__radio-item-label">Commons only instruments</label>
+			</div>
+		
+			<div class="p-form__radio-item">
+				<input type="radio" name="calculation-style" id="calculation-style-6" value="6" required <% if @calculation_style == 6 -%>checked<% end -%> />
+				<label for="calculation-style-6" class="p-form__radio-item-label">Commons only sitting days</label>
+			</div>
+		
+			<div class="p-form__radio-item">
+				<input type="radio" name="calculation-style" id="calculation-style-4" value="4" required <% if @calculation_style == 4 -%>checked<% end -%> />
+				<label for="calculation-style-4" class="p-form__radio-item-label">Proposed negative statutory instruments</label>
+			</div>
+		
+			<div class="p-form__radio-item">
+				<input type="radio" name="calculation-style" id="calculation-style-5" value="5" required <% if @calculation_style == 5 -%>checked<% end -%> />
+				<label for="calculation-style-5" class="p-form__radio-item-label">Treaty periods A and B</label>
+			</div>
+		</fieldset>
 	
-	<p>
-		<label>
-			Number of days to count
-			<br>
-			<input type="number" name="day-count" id="day-count" required>
-		</label>
-	</p>
 	
-	<button type="submit" id="calculate">Start</button>
-</form>
+		<fieldset class="p-form__fieldset p-3 my-3 border rounded">
+		 	<legend class="p-form__fieldset-legend">Choose a starting date</legend>
+		    <input class="form-control" type="date" id="start-date" name="start-date" required />
+		 </fieldset>
+	 
+	 	<fieldset class="p-form__fieldset p-3 my-3 border rounded">
+	 		<legend class="p-form__fieldset-legend">Number of days to count</legend>
+	 		<div class="p-form__form-group">
+	 		  	<input type="number" name="day-count" id="day-count" class="p-form__input" required>
+	 		</div>
+	 	</fieldset>
+	
+		<button type="submit" class="btn btn-primary" id="calculate">Calculate</button>
+	</form>
+</section>
