--- a/app/views/house_days/adjournment_day_preceding.html.erb
+++ b/app/views/house_days/adjournment_day_preceding.html.erb
@@ -1,3 +1,3 @@
-<ol>
+<ol class="unnumbered">
 	<%= render :partial => 'adjournment_day/adjournment_day', :collection => @house.preceding_adjournment_days %>
 </ol>
