--- a/app/views/house_days/adjournment_day_upcoming.html.erb
+++ b/app/views/house_days/adjournment_day_upcoming.html.erb
@@ -1,5 +1,5 @@
 <% unless @house.upcoming_adjournment_days.empty? %>
-	<ol>
+	<ol class="unnumbered">
 		<%= render :partial => 'adjournment_day/adjournment_day', :collection => @house.upcoming_adjournment_days %>
 	</ol>
 <% else -%>
