--- a/app/views/house_days/sitting_day_preceding.html.erb
+++ b/app/views/house_days/sitting_day_preceding.html.erb
@@ -1,3 +1,3 @@
-<ol>
+<ol class="unnumbered">
 	<%= render :partial => 'sitting_day/sitting_day', :collection => @house.preceding_sitting_days %>
 </ol>
