--- a/app/views/house_days/virtual_sitting_day_upcoming.html.erb
+++ b/app/views/house_days/virtual_sitting_day_upcoming.html.erb
@@ -1,5 +1,5 @@
 <% unless @house.upcoming_virtual_sitting_days.empty? %>
-	<ol>
+	<ol class="unnumbered">
 		<%= render :partial => 'virtual_sitting_day/virtual_sitting_day', :collection => @house.upcoming_virtual_sitting_days %>
 	</ol>
 <% else -%>
