--- a/app/views/interval_calculator/form.html.erb
+++ b/app/views/interval_calculator/form.html.erb
@@ -3,23 +3,21 @@
 <%= content_tag( 'p', "This calculation depends on sitting day data. Sitting day data is complete for both Houses since the 13th June 2017, the start of the #{link_to( '57th Parliament', parliament_show_url( :parliament => 57 ) )}.".html_safe ) %>
 
 
-<form action="/egg-timer/calculator/interval/calculate" method="GET" id="calculator">
-	
-	<fieldset>
-		<legend>Choose a start date</legend>
-			
-			<p><input type="date" name="start-date" id="start-date" required>
-		
-	</fieldset>
-	
-	<fieldset>
-		<legend>Choose an end date</legend>
-			
-			<p><input type="date" name="end-date" id="end-date" required>
-		
-	</fieldset>
-	
-	<button type="submit" id="calculate">Calculate</button>
-</form>
+<section>
+	<form action="/egg-timer/calculator/interval/calculate" method="GET" id="calculator" class="p-form">
 
+		<fieldset class="p-form__fieldset p-3 my-3 border rounded">
+		 	<legend class="p-form__fieldset-legend">Choose a start date</legend>
+		    <input class="form-control" type="date" id="start-date" name="start-date" required />
+		 </fieldset>
+	 
+	 	<fieldset class="p-form__fieldset p-3 my-3 border rounded">
+	 	 	<legend class="p-form__fieldset-legend">Choose an end date</legend>
+	 	    <input class="form-control" type="date" id="end-date" name="end-date" required />
+	 	 </fieldset>
+		 
+		 <button type="submit" class="btn btn-primary" id="prod">Calculate</button>
+	</form>
+</section>
+  
 <%= render :partial => 'disclaimer/disclaimer' %>
