--- a/app/views/meta/schema.html.erb
+++ b/app/views/meta/schema.html.erb
@@ -1,3 +1,3 @@
-<div class="schema-wrapper">
+<div class="overflow-auto">
 	<a href="/egg-timer/schema.png"><%= image_tag( '/egg-timer/schema.png' ) %></a>
 </div>
