--- a/app/views/parliament/show.html.erb
+++ b/app/views/parliament/show.html.erb
@@ -4,43 +4,43 @@
 
 
 <% unless @in_parliament_periods.empty? %>
-	<div id="sessions-and-prorogations">
+	<section id="sessions-and-prorogations">
 		<%= content_tag( 'h2', 'Sessions and prorogations' ) %>
-		<div class="table-wrapper">
-			<table>
+		<div class="overflow-auto">
+			<table class="table">
 				<%= render :partial => 'in_parliament_period_table_head' %>
 				<tbody>
 					<%= render :partial => 'in_parliament_period', :collection => @in_parliament_periods %>
 				</tbody>
 			</table>
 		</div>
-	</div>
+	</section>
 <% end -%>
 
 <% unless @parliament.sessions.empty? %>
-	<div id="sessions">
+	<section id="sessions">
 		<%= content_tag( 'h2', 'Sessions' ) %>
-		<div class="table-wrapper">
-			<table>
+		<div class="overflow-auto">
+			<table class="table">
 				<%= render :partial => 'in_parliament_period_table_head' %>
 				<tbody>
 					<%= render :partial => 'session/session_in_parliament', :collection => @parliament.sessions %>
 				</tbody>
 			</table>
 		</div>
-	</div>
+	</section>
 <% end -%>
 
 <% unless @parliament.prorogation_periods.empty? %>
-	<div id="prorogations">
+	<section id="prorogations">
 		<%= content_tag( 'h2', 'Prorogations' ) %>
-		<div class="table-wrapper">
-			<table>
+		<div class="overflow-auto">
+			<table class="table">
 				<%= render :partial => 'in_parliament_period_table_head' %>
 				<tbody>
 					<%= render :partial => 'prorogation_period/prorogation_period_in_parliament', :collection => @parliament.prorogation_periods %>
 				</tbody>
 			</table>
 		</div>
-	</div>
+	</section>
 <% end -%>
