application layout now calls design system fat footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,6 @@
 				</div>
 			</div>
 		</main>
-		<%= render 'library_design/footer' %>
+		<%= render 'library_design/footer/fat_footer' %>
 	</body>
 </html>
