added p-form__radio-group-spaced class to radio button group div. uses style from library design gem to add vertical padding for radio buttons in a group

--- a/app/views/calculator/_form.html.erb
+++ b/app/views/calculator/_form.html.erb
@@ -5,7 +5,7 @@
 
 		<fieldset class="p-form__fieldset p-3 my-3 border rounded">
 			<legend class="p-form__fieldset-legend">Choose a period to calculate</legend>
-			<div class="p-form__radio-group">
+			<div class="p-form__radio-group p-form__radio-group-spaced">
 				<%= render :partial => 'calculator/procedure', :collection => @procedures %>
 			</div>
 		</fieldset>
