--- a/app/views/calculator/_style_form.html.erb
+++ b/app/views/calculator/_style_form.html.erb
@@ -3,7 +3,7 @@
 
 		<fieldset class="p-form__fieldset p-3 my-3 border rounded">
 			<legend class="p-form__fieldset-legend">Calculation style</legend>
-			<div class="p-form__radio-group">
+			<div class="p-form__radio-group p-form__radio-group-spaced">
 		
 			<div class="p-form__radio-item">
 				<input type="radio" name="calculation-style" id="calculation-style-1" value="1" required <% if @calculation_style == 1 -%>checked<% end -%>/>
